# phaseforge

./: .gitignore  CHANGELOG.md  CLAUDE.md  GUIDE.md  PhaseForge_DSP_Pipeline.md  README.md  index.html  mlx-start.sh  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.claude/: settings.json
.qwen/: settings.json
MD files/: 01-ui-specification.md
dev-log/: TZ-001.md  TZ-002.md  index.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  project.rs  recent.rs  snapshots.rs
src-tauri/src/analysis/: mod.rs
src-tauri/src/dsp/: baffle.rs  fft.rs  impulse.rs  interpolation.rs  merge.rs  mod.rs  phase.rs  smoothing.rs
src-tauri/src/export/: mod.rs
src-tauri/src/fir/: cepstral.rs  dispatch.rs  helpers.rs  iir_path.rs  legacy.rs  mod.rs  pipeline.rs  tests.rs  types.rs  wav.rs  windowing.rs
src-tauri/src/io/: mod.rs  parser.rs
src-tauri/src/peq/: biquad.rs  greedy.rs  lma.rs  mod.rs  q_envelope.rs  types.rs
src-tauri/src/phase/: mod.rs
src-tauri/tests/: e2e_export.rs  e2e_sum.rs  e2e_sum_real_project.rs  golden_fir_snapshots.rs  pipeline_contract.rs  release_readiness_stage1.rs  release_readiness_stage2.rs  release_readiness_stage3.rs  release_readiness_stage4.rs  release_readiness_stage5.rs  rephase_compare.rs  sum_3band_lr4_flat.rs  sum_3band_lr4_no_meas.rs  wav_peak_convention.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/fixtures/: golden_fir.json  pipeline_contract.json  sum_3band_lr4_flat.json
(+227 files in other folders)
