[package]
name = "phaseforge"
version = "0.1.0"
description = "DSP Room/Speaker Correction Tool"
authors = ["PhaseForge"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "phaseforge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
rustfft = "6"
num-complex = "0.4"
dirs = "5"
